Fix reload bug on safari mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,8 @@ html, body {
 #bg, #bg1, #bg2, #bg3 {
     animation-duration: 1s;
     -vendor-animation-duration: 1s;
-    pointer-events: none; 
+    pointer-events: none;
+    z-index: 0; 
 }
 
 #bg {
@@ -54,13 +55,14 @@ html, body {
 
 .descrHdr {
     font-size: 2.5vh;
+    z-index: 1;
 }
 
 #vidcontainer {
     display: none;
     position: absolute;
     max-width: 100%;
-    height: 100vh;
+    height: 100%;
     animation-duration: 0.5s;
     -vendor-animation-duration: 0.5s;
     background-color: black;
